MiniCompiladorWorkflow/tests/invalid/error3.wf
tarea inicio { ir_a inexistente; }
